prod push template

--- a/gulp+webpack2.0/src/assets/styles/assets/base.scss
+++ b/gulp+webpack2.0/src/assets/styles/assets/base.scss
@@ -187,3 +187,9 @@ input[type=number]::-webkit-outer-spin-button {
 	height: 8px;
 	width: 8px;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
