--- a/gulp+webpack2.0/src/assets/styles/assets/interface.scss
+++ b/gulp+webpack2.0/src/assets/styles/assets/interface.scss
@@ -9,22 +9,23 @@
 	.page__content {
 		flex-grow: 1;
 	}
-	
 	.page__footer-wrapper {
 		flex-shrink: 0;
 	}
 }
+.section-pading--top {
+	padding-top: 60px;
+}
 
+// PAGINATION
 
 .pagination {
   margin: auto auto 0;
-
   .nav-links {
     display: flex;
     align-items: center;
     justify-content: center;
   }
-
   .dots {
     margin: 0 5px;
     color: $mc;
@@ -32,7 +33,6 @@
     font-weight: 500;
     line-height: 40px;
   }
-
   .page-numbers.current:not(.dots) {
     margin: 0 5px;
     line-height: 40px;
@@ -46,7 +46,6 @@
       transform: translateY(0);
     }
   }
-
   .page-numbers:not(.dots) {
     margin: 0 5px;
     display: flex;
@@ -105,34 +104,51 @@
     }
   }
 }
-
+// BREADCRUMBS
 .breadcrumb {
-  z-index: 6;
-  margin: 0 0 20px 0;
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  letter-spacing: 0.32px;
+	z-index: 6;
+	margin-left: -25px;
+	padding: 16px 0;
+	display: flex;
+	width: 100%;
+	flex-wrap: wrap;
+	letter-spacing: 0.32px;
 
-  li {
-    margin: 0 5px;
-    display: flex;
-    align-items: center;
-    color: $mc;
-    list-style: none;
+	li {
+		margin-bottom: 10px;
+		display: flex;
+		align-items: center;
+		color: $mc;
+		list-style: none;
 
-    a {
-      margin-right: 10px;
-      color: $mc;
-      text-decoration: none;
-    }
+		a {
+			position: relative;
+			padding: 0 25px;
+			font-family: $default-font2;
+			font-size: 18px;
+			color: $mc;
 
-    &:last-child {
-      color: $text;
-    }
-  }
+			&::before {
+				position: absolute;
+				top: 50%;
+				right: 0;
+				width: 3px;
+				height: 3px;
+				background-color: #000;
+				transform: translate(50%, -50%);
+				content: '';
+			}
+		}
+
+		&:last-child {
+			padding: 0 25px;
+			font-family: $default-font2;
+			font-size: 18px;
+			color: $bc;
+		}
+	}
 }
-
+// BUTTON
 .button {
   position: relative;
   display: flex;
@@ -169,7 +185,7 @@
 		transition: all 0.3s;
 	}
 }
-
+// SECTION TITLE
 .section__title {
 	z-index: 5;
 	margin: 0 auto rem(70px);
@@ -179,7 +195,7 @@
 	font-size: 30px;
 	line-height: 1.3em;
 }
-
+// LINK HOVER
 .hover-underline {
   position: relative;
 
@@ -202,47 +218,29 @@
   }
 }
 
-.underline-color--white {
-  &::after {
-    background-color: $wc;
-  }
-}
+	.underline-color--white {
+		&::after {
+			background-color: $wc;
+		}
+	}
 
-.underline-color--dark {
-  &::after {
-    background-color: $mc;
-  }
-}
-
+	.underline-color--dark {
+		&::after {
+			background-color: $mc;
+		}
+	}
+// FORM
 .main-form {
-	padding-bottom: 5%;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
-	align-self: flex-end;
-	&__button {
-		display: flex;
-		flex-grow: 1;
-		justify-content: flex-end;
-		border: none;
-		background-color: transparent;
-		svg{
-			width: 52px;
-			height: 58px;
-		}
-	}
-	.main-form-block{
+	justify-content: space-around;
+	height: 100%;
 
-		.icon, svg{
-			width: 14px;
-			height: 14px;
-		}
-	}
 	&-block {
 		position: relative;
-		margin-bottom: rem(50px);
 		display: flex;
-		width: 100%;
+		justify-content: space-between;
+		width: 200px;
 		height: 36px;
 	}
 
@@ -253,31 +251,13 @@
 		display: flex;
 		align-items: center;
 		pointer-events: none;
-		.wrap-icon {
-			z-index: 5;
-			display: flex;
-			max-width: 36px;
-			max-height: 36px;
-			width: 36px;
-			height: 36px;
-			justify-content: center;
-			align-items: center;
-			background: #E4E7F0;
-			border-radius: 3px 0px 0px 3px;
-
-			svg {
-				width: 40%;
-				height: 40%;
-				fill: $mc;
-			}
-		}
 	}
 
 	&__text {
 		display: flex;
 		align-items: center;
-		font-weight: 500;
-		color: $text;
+		color: $wc;
+		font-family: $default-font;
 		pointer-events: none;
 		transform: translateY(0%);
 		transition: all 0.4s;
@@ -286,11 +266,327 @@
 	&__input {
 		width: 100%;
 		height: 36px;
-		color: $mc;
+		color: $wc;
 		background: transparent;
 		border: none;
-		border-bottom: 3px solid $mc3;
+		font-family: $default-font;
+		border-bottom: 1px solid #848484;
+	}
+}
+
+//RANGE SLAIDER
+
+.filter__checkbox {
+	display: none;
+	visibility: hidden;
+	opacity: 0;
+}
+
+.filter__checkbox+label {
+	margin: 0 10px;
+	width: 40px;
+	min-width: 40px;
+	height: 40px;
+	min-height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid $mc4;
+	transition: all 0.4s;
+
+	&:hover {
+		cursor: pointer;
+		background-color: lighten($color: $mc, $amount: 10);
 	}
 }
 
 
+
+.filter__checkbox:checked+label {
+	background-color: $mc;
+	color: $wc;
+	cursor: pointer;
+	border: 1px solid transparent;
+
+	&:hover {
+		cursor: pointer;
+		background-color: $mc;
+	}
+}
+
+
+
+.irs--flat .irs-line {
+	height: 2px;
+	background-color: $bc;
+}
+
+.irs--flat .irs-bar {
+	height: 2px;
+	background-color: $mc4;
+}
+
+.irs--flat .irs-handle {
+	width: 10px;
+	height: 10px;
+	background-color: $mc;
+}
+
+.irs--flat .irs-handle>i:first-child {
+	background-color: $mc;
+}
+
+.irs--flat .irs-handle.state_hover>i:first-child,
+.irs--flat .irs-handle:hover>i:first-child {
+	background: $mc;
+	cursor: pointer;
+}
+
+.irs--flat .irs-handle.state_hover>i:first-child,
+.irs--flat .irs-handle:hover>i {
+	background: $mc;
+	cursor: pointer;
+}
+
+
+.range-item input[type=number] {
+	font-size: 14px;
+	background-color: transparent;
+	border: none;
+	font-family: $default-font2;
+}
+
+//CARD FLAT
+
+.filter-results-item {
+	position: relative;
+	margin-bottom: 20px;
+	width: 25%;
+	padding: 0 20px;
+	transition: all .4s;
+
+	@include to(880px) {
+		width: 33%;
+	}
+
+	@include to(640px) {
+		width: 48%;
+	}
+
+	@include to(576px) {
+		width: 80%;
+	}
+
+	@include to(425px) {
+		width: 100%;
+	}
+}
+
+.filter-results-item__link {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.filter-results-item__img {
+	margin-bottom: 20px;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.filter-results-item__img img {
+	height: auto;
+	max-height: 100%;
+	max-width: 85%;
+}
+
+.filter-results-item__table {
+	margin-top: auto;
+	margin-bottom: 20px;
+	width: 100%;
+	color: $bc;
+	font-family: $default-font2;
+}
+
+.filter-results-item__button {
+	display: flex;
+	width: 100%;
+	height: 40px;
+	min-height: 40px;
+	justify-content: center;
+	align-items: center;
+	color: $mc;
+	border: 1px solid $mc3;
+}
+
+// PROGRESS ITEM
+
+.progress-list {
+	@include col();
+	@include size(12);
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.progress-item {
+	margin: 0 20px 30px;
+	min-width: 300px;
+	display: flex;
+	align-items: center;
+
+	@include to(1024px) {
+		margin: 0 5px 30px;
+
+	}
+
+	@include to(576px) {
+		flex-direction: column;
+	}
+
+	&__title {
+		min-width: 120px;
+		margin-right: 10px;
+		font-family: $default-font2;
+
+		@include to(1024px) {
+			min-width: 95px;
+
+		}
+
+		@include to(576px) {
+			margin-right: 0px;
+			margin-bottom: 15px;
+			min-width: 95px;
+			text-align: center;
+
+		}
+	}
+}
+
+.progress-item .wrapper {
+	display: inline-block;
+	position: relative;
+	background-color: $mc3;
+	width: 300px;
+	height: 40px;
+}
+
+.progress-item .wrapper .line--white {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 40px;
+	width: 300px;
+	background-color: $wc;
+	border: 1px solid #afafaf;
+	color: #000;
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 20px;
+	letter-spacing: .7px;
+	text-align: center;
+	line-height: 40px;
+	transition: all 5s;
+}
+
+.progress-item .wrapper .line--accent {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 40px;
+	width: 300px;
+	background-color: $mc;
+	color: #fff;
+	clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 20px;
+	letter-spacing: .7px;
+	text-align: center;
+	line-height: 40px;
+	transition: all 5s;
+}
+
+// LANG
+
+.language {
+	position: relative;
+	width: 60px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	a {
+		font-size: 14px;
+		color: $bc2;
+	}
+
+}
+
+.lang--active {
+	display: block;
+	line-height: 1em;
+}
+
+.language-btn {
+	position: relative;
+	background-color: transparent;
+	display: block;
+	transition: all 0.3s;
+
+	svg {
+		width: 14px;
+		height: 8px;
+		transition: all 0.3s;
+	}
+}
+
+.svg--active {
+	.language-btn {
+		transform: rotate(-180deg);
+	}
+}
+
+.language-btn:hover {
+	transform: rotate(-180deg);
+}
+
+.language:hover .lang--active {
+	transition: all 0.4s;
+	transform: translateY(-140%);
+
+	@include to(425px) {
+		transform: translateY(-120%);
+
+	}
+}
+
+.lang__item {
+	line-height: 1.5em;
+
+	@include to(425px) {
+		line-height: 1.2em;
+
+	}
+}
+
+
+.lang_dropdown {
+	position: absolute;
+	top: -2px;
+	opacity: 0;
+	margin: 0;
+	padding: 0;
+	width: 46.33px;
+	max-height: 0;
+	overflow: hidden;
+	list-style: none;
+	transition: .35s;
+}
+
+.lang-dropdown--active {
+	max-height: 60px;
+	opacity: 1;
+}
