--- a/gulp+webpack2.0/src/pug/includes/mixins.pug
+++ b/gulp+webpack2.0/src/pug/includes/mixins.pug
@@ -6,12 +6,17 @@ mixin testCard(link, src, title, descr)
 
 mixin icon(icon, condition)
 	if(condition)
-		svg(class= icon  role="presentation")
+		svg(class= icon  role="presentation")&attributes(attributes)
 			use(xlink:href="#"+ icon + "")
 	else
 		span(class='svg-wrap')&attributes(attributes)
 			svg(class="svg-icon icon--"+ icon + ""  role="presentation")
 				use(xlink:href="#"+ icon + "")
+mixin svg(icon)
+		svg(class="icon--"+ icon + ""  role="presentation")&attributes(attributes)
+			use(xlink:href="#icon-"+ icon + "")
 
 mixin link-blank(href)
 	a(herf=href rel="nofollow" target="_blank")
+mixin img(src)
+	img(src='./assets/images/'+src+'' title="foto" alt="foto")&attributes(attributes)
