--- a/gulp+webpack2.0/src/pug/layout/main.pug
+++ b/gulp+webpack2.0/src/pug/layout/main.pug
@@ -1,15 +1,23 @@
 include ../includes/mixins.pug
-block variable
 -
 	var pagesLink = [	
 		{
 			home: '/',
-			heart: './heart.html',
 			about: './about.html',
-			catalog: './catalog.html',
+			news: './news.html',
+			services: './services.html',
+			career: './career.html',
+			news: './catalog.html',
 			contact: './contact.html',
+			planning: './planning.html',
+			machinery: './machinery.html',
+			security: './security.html',
+			realtyLive: './realty-live.html',
+			realtyComm: './realty-comm.html',
+			realtySocial: './realty-social.html',
 		}
 	];
+block variable
 doctype html
 html(lang="uk")
 	head
@@ -24,7 +32,7 @@ html(lang="uk")
 		//- Фавиконки (https://realfavicongenerator.net)
 		//- link(rel='apple-touch-icon', sizes='180x180', href='/img/favicon/apple-touch-icon.png')
 		//- link(rel='icon', type='image/png', sizes='32x32', href='/img/favicon/favicon-32x32.png')
-		//- link(rel='icon', type='image/png', sizes='16x16', href='/img/favicon/favicon-16x16.png')
+		link(rel='icon', type='image/png', sizes='16x16', href='../static/favicon.ico')
 		//- link(rel='manifest', href='/img/favicon/site.webmanifest')
 		//- link(rel='mask-icon', href='/img/favicon/safari-pinned-tab.svg', color='#5bbad5')
 		//- meta(name='msapplication-TileColor', content='#5bbad5')
@@ -34,14 +42,30 @@ html(lang="uk")
 		block meta
 		block head
 
-	body(class="")
-		include ../includes/menu.pug
-		include ../includes/loader.html
+	body
+		// START SVG SPRITE
 		include ../../assets/svg-sprite/sprite/symbol_sprite.php
+		// END SVG SPRITE
+		// START LOADER
+		include ../includes/loader.html
+		// END LOADER
+		// START POPUP MODAL
+		include ../includes/popup.pug
+		// END POPUP MODAL
+			
+		// -------
+		// -------
+		// -------
+		// -------
+		// START HEADER
+		block header
+		// END HEADER
 		.page__inner
 			.page__content
-				block header
 				block content
+
 			.page__footer-wrapper
+				// START FOOTER
 				block footer
+				// END FOOTER
 		block scripts
