--- a/gulp+webpack2.0/src/pug/layout/main.pug
+++ b/gulp+webpack2.0/src/pug/layout/main.pug
@@ -22,7 +22,7 @@ doctype html
 html(lang="uk")
 	head
 		meta(charset='utf-8')
-		meta(name='viewport', content='width=device-width, initial-scale=1')
+		meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
 		//- Edge и ряд мобильных браузеров слишком умны. Отключим это.
 		meta(name='format-detection', content='telephone=no')
 		meta(name='format-detection', content='date=no')
