--- a/gulp+webpack2.0/src/pug/includes/mixins.pug
+++ b/gulp+webpack2.0/src/pug/includes/mixins.pug
@@ -20,3 +20,31 @@ mixin link-blank(href)
 	a(herf=href rel="nofollow" target="_blank")
 mixin img(src)
 	img(src='./assets/images/'+src+'' title="foto" alt="foto")&attributes(attributes)
+
+mixin btn(text)
+	img(type="button" class="button button-reset--default-styles")&attributes(attributes)
+
+mixin SelectBox(name, id, options)
+	.u-select-box
+		.u-select-box__current(tabindex="1")
+			each option, index in options
+				.u-select-box__value
+					if(index == 0)
+						input.u-select-box__input(class='js_'+1+'checkbox js_select_checkbox' type="radio" id=id+index value=option.value name=id checked)
+					else
+						input.u-select-box__input(class='js_'+id+'checkbox js_select_checkbox' type="radio" id=id+index value=option.value name=id)
+					p.u-select-box__input-text #{option.name}
+				+svg('select-arr').u-select-box__icon
+		ul.u-select-box__list
+			each option, index in options
+				li
+					label.u-select-box__option(for=id+index aria-hidden) #{option.name}
+
+mixin RangeSlider(options)
+	each option, index in options
+		li.range-item.filter__item.js-range-item
+			h4.range-item__label.filter__label #{option.label}
+			input.js-range-init(id=option.id type="hidden" data-from=option.from data-min=option.min data-to=option.to data-max=option.max)
+			.u-range-item-nav
+				input(id=option.id+"_min" class="js_"+option.id+"_min js-current-min" name=option.id+"_min" maxlength=option.max type="number" min=option.min value=option.min max=option.max)
+				input(id=option.id+"_max" class="js_"+option.id+"_max js-current-max" name=option.id+"_max" maxlength=option.max type="number" min=option.min value=option.max max=option.max)
