type script + eslint

--- a/gulp+webpack2.0/src/pug/pages/temp.pug
+++ b/gulp+webpack2.0/src/pug/pages/temp.pug
@@ -20,8 +20,7 @@ block head
 		link(rel='stylesheet', href="./assets/styles/main.min.css")
 block scripts
 	script(defer src='./assets/scripts/index.js')
-	script(defer src='./assets/scripts/home.js')
-	script(defer src='./assets/scripts/about.js')
+	script(defer src='./assets/scripts/.js')
 block content
 	.-content
 		include ../includes/breadcrumbs.pug
