--- a/gulp+webpack2.0/src/pug/layout/main.pug
+++ b/gulp+webpack2.0/src/pug/layout/main.pug
@@ -4,17 +4,6 @@ include ../includes/mixins.pug
 		{
 			home: '/',
 			about: './about.html',
-			news: './news.html',
-			services: './services.html',
-			career: './career.html',
-			news: './catalog.html',
-			contact: './contact.html',
-			planning: './planning.html',
-			machinery: './machinery.html',
-			security: './security.html',
-			realtyLive: './realty-live.html',
-			realtyComm: './realty-comm.html',
-			realtySocial: './realty-social.html',
 		}
 	];
 block variable
@@ -42,7 +31,7 @@ html(lang="uk")
 		block meta
 		block head
 
-	body
+	body(class= class_page id= id_page)
 		// START SVG SPRITE
 		include ../../assets/svg-sprite/sprite/symbol_sprite.php
 		// END SVG SPRITE
